    + Install x2goupdateoptionsstring man page.
  * x2goserver.spec:
    + Install new x2goisint wrapper.
    + Install section 1 man pages.
    + Exclude x2goagent man page from x2goserver package.
    + Pass down LIBDIR via make calls, not by modifying all source files with
      sed.
  * debian/x2goserver.install:
    + Install bin/x2goupdateoptionsstring.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.4):
    - Add support for X2Go KDrive.
    - x2goruncommand: start Xsession on X2Go KDrive desktops.

  [ Tom Ruzicka ]
  * debian/po: Add Czech debconf translation.

  [ Ulrich Sibiller ]
  * New upstream version (4.1.0.4):
    - x2goserver-x2goagent/etc/keystrokes.cfg: sync with nx-libs 3.5.99.20.
      Previous version was broken and incomplete. Fixes: #1388.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 14 Jan 2019 16:33:04 +0100

x2goserver (4.1.0.3-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream version (4.1.0.3)
    - x2goserver.service: Add Documentation= key.
    - x2goserver/lib/x2gocheckport: chmod a+x.
    - New bin:pkg: x2goserver-desktopsharing. Move all desktop sharing
      integration logic from x2godesktopsharing to x2goserver src:pkg.
    - Don't rely on "ln -sf" to remove a symlink before recreating it. If the
      target is non-writable, this may fail (observed on a Debian stretch
      system). Thus, removing the symlink file first and then recreating it.
    - Massive white-space cleanup (at EOLs).
    - x2goserver/bin/x2goruncommand: Support IceWM as desktop session type.
  * debian/x2goserver*.dirs:
    + Let dirs have a trailing slash in their path (for the human eye merely).
  * debian/copyright:
    + Regenerate auto-generated copyright.in file.
    + Adopt from recent Debian packaging.
    + Add x2goserver.spec.
  * debian/control:
    + Move xfonts-base from D to R. Thanks lintian.
    + Move C (x2goserver) with versioned x2godesktopsharing, to B.